--- a/LMSBackend/.env.development
+++ b/LMSBackend/.env.development
@@ -1,7 +1,10 @@
-# Development Environment
-DB_NAME: 'lms'
-DB_USER: 'root'
-DB_PASSWORD: '1101'
-DB_HOST: 'localhost'
-DB_PORT=5432
+# Database configuration for development
+DB_NAME=lms
+DB_USER=root
+DB_PASSWORD=1101
+DB_HOST=localhost
+DB_PORT=3306
+
+# App configuration
 APP_PORT=5595
+NODE_ENV=development
